--- a/css/agency.css
+++ b/css/agency.css
@@ -166,7 +166,7 @@ body {
 header.masthead {
   text-align: center;
   color: #FFFFFF;
-  background-image: url("../img/header-bg2.jpg");
+  background-image: url("../img/header-bg3.png");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -194,7 +194,7 @@ header.masthead {
 @media (min-width: 768px) {
   header.masthead .intro-text {
     padding-top: 300px;
-    padding-bottom: 200px; }
+    padding-bottom: 150px; }
     header.masthead .intro-text .intro-lead-in {
       font-size: 40px;
       font-style: italic;
