--- a/css/agency.css
+++ b/css/agency.css
@@ -11,7 +11,7 @@ body {
 p {
   font-size: 16px;
   font-weight: 200;
-  color: #a6a7aa;
+  color: #8e8e8e;
   line-height: 1.75; }
 
 a {
@@ -30,8 +30,14 @@ h3 {
   color: #5E5E5E;
   font-weight: 600;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;}
-h4,
-h5,
+h4 {
+  color: #5E5E5E;
+  font-weight: 350;
+  font-family: 'Opan Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+h5 {
+  color: #5E5E5E;
+  font-weight: 300;
+  font-family: 'Opan Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 h6 {
   color: #5E5E5E;
   font-weight: 350;
@@ -53,6 +59,11 @@ section {
 @media (min-width: 768px) {
   section {
     padding: 100px 0; } }
+
+object {
+  max-width: 800px;
+  height: auto;
+}
 
 /*!kikago背景圖*/
 #fullbg {
